ADDS more examples

--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>BaeFrontend</title>
+  <title>DOME Marketplace</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Blinker:wght@300;400;500;600;700&display=swap">
 </head>
-<body>
+<body class="h-screen bg-secondary-50 bg-contain bg-no-repeat bg-right-bottom"> <!--style="background-image: url('assets/logos/dome-logo-element-colour.png');"-->
   <app-root></app-root>
 </body>
 </html>
