ADDS events to know if the filter panel is shown

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     }
   </script>
 </head>
-<body class="h-screen bg-white dark:bg-gray-900"> <!--style="background-image: url('assets/logos/dome-logo-element-colour.png');"-->
+<body class="h-screen bg-white dark:bg-gray-900"> <!-- class="dark:bg-gray-900" style="background-image: url('assets/logos/dome-logo-element-colour.png');"-->
   <app-root></app-root>
 </body>
 </html>
