ADD error messages when POST/PATCH fails + CHANGE projects tab icon

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>DOME Marketplace</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/chatbot/images/dome_logo.PNG">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Blinker:wght@300;400;500;600;700&display=swap">
   <script>
     // On page load or when changing themes, best to add inline in `head` to avoid FOUC
