DELETE footer note + CHANGE DOME Marketplace to YUMKET + SET landingpage categories to root categories

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>DOME Marketplace</title>
+  <title>YUMKET deployed by the DOME Project</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/chatbot/images/dome_logo.PNG">
