ADD Dome Trust Service Provider info as a popover

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/chatbot/images/dome_logo.PNG">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Blinker:wght@300;400;500;600;700&display=swap">
+  <link href="https://cdn.jsdelivr.net/npm/flowbite@2.4.1/dist/flowbite.min.css" rel="stylesheet" />
   <script>
     // On page load or when changing themes, best to add inline in `head` to avoid FOUC
     if (localStorage.getItem('color-theme') === 'dark' || (!('color-theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
@@ -18,5 +19,6 @@
 </head>
 <body class="h-screen bg-white dark:bg-gray-900"> <!-- class="dark:bg-gray-900" style="background-image: url('assets/logos/dome-logo-element-colour.png');"-->
   <app-root></app-root>
+  <script src="../node_modules/flowbite/dist/flowbite.min.js"></script>
 </body>
 </html>
