--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>YUMKET deployed by the DOME Project</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="assets/chatbot/images/dome_logo.PNG">
+  <link rel="icon" type="image/x-icon" href="/assets/dome_logo.PNG">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Blinker:wght@300;400;500;600;700&display=swap">
   <link href="https://cdn.jsdelivr.net/npm/flowbite@2.4.1/dist/flowbite.min.css" rel="stylesheet" />
   <script>
