FIX status filter on user profile

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,6 @@
 </head>
 <body class="h-screen bg-white dark:bg-gray-900"> <!-- class="dark:bg-gray-900" style="background-image: url('assets/logos/dome-logo-element-colour.png');"-->
   <app-root></app-root>
-  <script src="../node_modules/flowbite/dist/flowbite.min.js"></script>
+  <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.1/flowbite.min.js"></script>-->
 </body>
 </html>
