FIX QA Tickets + Improvements (#139)
* FIX price simulator's chars placing + add restrictions to char's description length

* FIX organization form reset contact medium if not saved when profile updated + DELETE provider header's background header

* ADD UX tasks

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>DOME Marketplace</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <link rel="icon" type="image/x-icon" href="/assets/dome_logo.PNG">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Blinker:wght@300;400;500;600;700&display=swap">
   <link href="https://cdn.jsdelivr.net/npm/flowbite@2.4.1/dist/flowbite.min.css" rel="stylesheet" />
@@ -17,7 +17,7 @@
     }
   </script>
 </head>
-<body class="h-screen bg-white dark:bg-tertiary-50"> <!-- class="dark:bg-gray-900" style="background-image: url('assets/logos/dome-logo-element-colour.png');"-->
+<body class="min-h-screen bg-white dark:bg-tertiary-50"> <!-- class="dark:bg-gray-900" style="background-image: url('assets/logos/dome-logo-element-colour.png');"-->
   <app-root></app-root>
   <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.1/flowbite.min.js"></script>-->
 </body>
